# test-razrabot

./: .env.example  README.md  TASK.md  pyproject.toml
src/: api.py  main.py  parser.py  utils.py
